[package]
name = "dev-glyph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.2", features = ["editor", "date"] }
tokio = { version = "*", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.31", features = [] }
crossterm = "0.27.0"
serde_json = "1.0.111"
config = { version = "0.13.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"