[package]
name = "dev-glyph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.7.4", features = ["editor", "date"] }
tokio = { version = "*", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4.37", features = [] }
crossterm = "0.27.0"
serde_json = "1.0.111"
config = { version = "0.13.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
termion = { version = "3.0.0" }